test/types/string/diten/multilineStringLineNumber.good
multilineStringLineNumber.chpl:8: error: Cannot initialize 'x' of type 'int(64)' from '1.5'
